--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,19 +3,6 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-# Create an option to switch between a system sdl library and a vendored sdl library
-option(MYGAME_VENDORED "Use vendored libraries" OFF)
-
-#if(MYGAME_VENDORED)
-    # This assumes you have added SDL as a submodule in vendored/SDL
-    #add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)
-#else()
-    # 1. Look for a SDL3 package,
-    # 2. look for the SDL3-shared component, and
-    # 3. fail if the shared component cannot be found.
-    #find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3-shared)
-#endif()
-
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
   cmake_policy(SET CMP0141 NEW)
@@ -24,5 +11,9 @@ endif()
 
 project ("FrysEngine")
 
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # Include sub-projects.
 add_subdirectory ("FrysEngine")
+add_subdirectory(vendored)
